--- a/frontend/public/404.html
+++ b/frontend/public/404.html
@@ -15,7 +15,7 @@
       })();
     </script>
     <script type="text/javascript">
-      // 處理 GitHub Pages 的路由
+      // 處理 SPA 路由重定向
       (function (l) {
         if (l.search[1] === "/") {
           var decoded = l.search
