更新前端依賴，新增 canvas 和 puppeteer，並調整 manifest.json 中的圖標格式為 PNG。修改 generate-icons.js 以使用 Puppeteer 生成 PNG 圖標，並優化 layout.tsx 中的圖標配置，新增 favicon.ico 支持。更新 useWorkStore.ts 以添加重置示例數據標記功能。

--- a/frontend/public/icons/generate-icons.html
+++ b/frontend/public/icons/generate-icons.html
@@ -13,11 +13,36 @@
       const sizes = [72, 96, 128, 144, 152, 192, 384, 512];
 
       const svgContent = `
-      <svg width="512" height="512" viewBox="0 0 512 512" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <rect width="512" height="512" rx="128" fill="#3B82F6"/>
-        <path d="M128 160C128 142.327 142.327 128 160 128H352C369.673 128 384 142.327 384 160V352C384 369.673 369.673 384 352 384H160C142.327 384 128 369.673 128 352V160Z" fill="white"/>
-        <path d="M192 224L256 288L320 224" stroke="#3B82F6" stroke-width="16" stroke-linecap="round" stroke-linejoin="round"/>
-        <circle cx="256" cy="256" r="32" fill="#3B82F6"/>
+      <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+        <defs>
+          <linearGradient id="faviconGradient" x1="0%" y1="0%" x2="100%" y2="100%">
+            <stop offset="0%" style="stop-color: #667eea; stop-opacity: 1" />
+            <stop offset="100%" style="stop-color: #764ba2; stop-opacity: 1" />
+          </linearGradient>
+          <linearGradient id="faviconIconGradient" x1="0%" y1="0%" x2="100%" y2="100%">
+            <stop offset="0%" style="stop-color: #ffffff; stop-opacity: 1" />
+            <stop offset="100%" style="stop-color: #f0f0f0; stop-opacity: 1" />
+          </linearGradient>
+        </defs>
+
+        <!-- Background -->
+        <circle cx="256" cy="256" r="240" fill="url(#faviconGradient)" stroke="#4c5777" stroke-width="8" />
+
+        <!-- Main eye icon representing "watched" -->
+        <g transform="translate(256, 224)">
+          <!-- Eye outline -->
+          <ellipse cx="0" cy="0" rx="80" ry="48" fill="url(#faviconIconGradient)" stroke="#4c5777" stroke-width="8" />
+          <!-- Pupil -->
+          <circle cx="0" cy="0" r="24" fill="#4c5777" />
+          <!-- Highlight -->
+          <circle cx="-8" cy="-8" r="8" fill="#ffffff" opacity="0.8" />
+        </g>
+
+        <!-- Checkmark indicating completion -->
+        <g transform="translate(256, 320)">
+          <circle cx="0" cy="0" r="32" fill="#10b981" stroke="#ffffff" stroke-width="8" />
+          <path d="M-12.8,0 L-4.8,9.6 L12.8,-12.8" stroke="#ffffff" stroke-width="12.8" fill="none" stroke-linecap="round" stroke-linejoin="round" />
+        </g>
       </svg>
     `;
 
